@@ -1,3 +1,8 @@
+Feb 16, 2006
+
+  * Added http_current_request/1 to get access to the currently executing
+    request.
+
 Feb 10, 2006
 
   * Make http_post deal with Unicode data.
